# --- Standard Project Metadata (PEP 621) ---
[project]
name = "zeroth-law"
version = "2025.4.8" # Epoch/Date based versioning
description = "Enforcer for the Zeroth Law AI Framework"
authors = [
    { name = "Trahloc colDhart", email = "github@trahloc.com" }, # Updated format
]
license = { text = "CC0" } # Standard license format
readme = "README.md"
requires-python = ">=3.13,<4.0"
classifiers = [ # Optional: Add classifiers for PyPI
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: CC0 License",
    "Operating System :: OS Independent",
]

# Runtime Dependencies
dependencies = [
    "autopep8",
    "bandit",       # Provides bandit, bandit-baseline, bandit-config-generator
    "black",
    "build",        # Provides pyproject-build
    "click",
    "coverage",
    "deptry",
    "flake8",
    "isort",        # Provides isort, isort-identify-imports
    "jq>=1.8.0",
    "jsonschema",
    "mutmut",
    "mypy",
    "pipdeptree",
    "poetry",
    "pre-commit",
    "py-spy",
    "pydantic",
    "pydocstyle",   # Provides pydocstyle
    "pyflakes",
    "pylint",
    "pytest",
    "pyyaml",
    "radon",
    "ruff",         # Provides ruff
    "safety",
    "scalene",
    "sqlite-utils", # Provides sqlite-utils
    "structlog",
    "tabulate",     # Provides tabulate
    "toml",
    "uv",           # Provides uv
    "vulture",
    "xdg",
    "yamllint",
    "zeroth-law",
]

# Optional Dependencies (for development, testing, etc.)
[project.optional-dependencies]
dev = [
    "pytest>=8.0",      # Testing framework
    "pytest-cov",       # Coverage reporting for pytest
    "pytest-mock",      # Mocking utilities for pytest
    "pytest-xdist",     # Parallel test execution
    "pytest-randomly",  # Randomize test order
    "black>=24.0",      # Code formatter
    "flake8>=7.0",      # Linter (style guide enforcement)
    "mypy>=1.8",        # Static type checker
    "ruff>=0.4.0",      # Fast linter and formatter
    "pre-commit>=3.6",  # Framework for managing pre-commit hooks
    "pydocstyle>=6.0",  # Docstring style checker (added)
    "yamllint>=1.26",   # YAML linter (added)
    "types-setuptools", # Type hints for setuptools
    "types-requests",   # Type hints for requests
    "build",            # Build package
    "twine",            # Upload package to PyPI
    "tox>=4.0",         # Test automation tool
    "coverage>=7.0",    # Code coverage measurement
    "jsonschema>=4.0",  # JSON schema validation
    "pyyaml",           # YAML parser
    "requests",         # HTTP library (for potential integrations)
    "uv>=0.2.0",        # Extremely fast Python package installer and resolver
    "sqlite-utils",     # For codebase map generation
]

test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist", # For parallel testing
    # "pytest-randomly",   # Randomize test order
    "pytest-dependency", # Manage test dependencies
]

# Scripts / Entry Points
[project.scripts]
# zeroth-law = "zeroth_law.cli:cli_group" # Removed in favor of zlt alias
zlt = "zeroth_law.cli:main"
generate-baselines = "zeroth_law.dev_scripts.generate_baseline_cli:main"
sync-dev = "zeroth_law.dev_scripts.sync_dev:main"
fix-json-whitespace = "zeroth_law.dev_scripts.fix_json_whitespace:main"
fix-json-schema = "zeroth_law.dev_scripts.fix_json_schema:main"

# --- Build System (Required by PEP 517) ---
[build-system]
requires = [
    "setuptools>=61.0",
] # Or another build backend like hatchling, flit_core
build-backend = "setuptools.build_meta"

# --- UV Configuration --- NOTE: Prettier (Node.js) Requirement ---
# This project uses Prettier (via npm/npx) for JSON formatting.
# Ensure Node.js (LTS) is installed: https://nodejs.org/
# Run `npm install` in the project root to install Prettier locally (uses package.json).
# -------------------------------------------------------------
# Removed [tool.uv.dev-dependencies] section

# --- Existing Tool Configurations (Keep As Is) --- #

# --- Add Zeroth Law Tool Configuration --- #
[tool.zeroth-law]
# Default excludes + legacy
exclude_dirs = [
    ".git",
    ".hg",
    ".svn",
    ".tox",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    ".legacy",     # <-- Added
]
exclude_files = []
ignore_codes = []
max_lines = 9999 # set to 140 when moved to main branch
max_complexity = 8
max_parameters = 5
max_statements = 50
# Explicitly define project and git roots relative to this file
# Project root path also implicitly defines the project directory name for validation.
project_root = "../zeroth_law_pkg/"
git_root = ".."

# Default skip duration (in hours) for ground truth TXT generation during sync.
# Tool runs older than this value will be processed. Set <= 0 to disable default time-based skip.
ground_truth_txt_skip_since = 24

# --- ZLT Tool Whitelist/Blacklist ---
[tool.zeroth-law.managed-tools]
whitelist = [
    "autopep8",
    "bandit",
    "bandit-baseline",
    "bandit-config-generator",
    "black",
    "coverage",
    "deptry",
    "flake8",
    "isort",
    "isort-identify-imports",
    "jsonschema",
    "mutmut",
    "mypy",
    "pip",
    "pipdeptree",
    "poetry",
    "pre-commit",
    "py-spy",
    "pycodestyle",
    "pydocstyle",
    "pyflakes",
    "pylint",
    "pyproject-build",
    "pytest",
    "radon",
    "ruff",
    "safety",
    "scalene",
    "sqlite-utils",
    "tabulate",
    "typer",
    "uv",
    "vulture",
    "wheel",
    "yamllint",
    "zlt",
]

blacklist = [
    "Activate.ps1",
    "activate",
    "activate.csh",
    "activate.fish",
    "blackd",
    "coverage-3.13",
    "coverage3",
    "dmypy",
    "doesitcache",
    "dul-receive-pack",
    "dul-upload-pack",
    "dulwich",
    "f2py",
    "findpython",
    "fix-json-schema",
    "fix-json-whitespace",
    "generate-baselines",
    "get_gprof",
    "get_objgraph",
    "httpx",
    "identify-cli",
    "keyring",
    "markdown-it",
    "mypyc",
    "nodeenv",
    "normalizer",
    "numpy-config",
    "pbr",
    "pbs-install",
    "pip3",
    "pip3.13",
    "pkginfo",
    "py.test",
    "pygmentize",
    "pylint-config",
    "pyreverse",
    "python",
    "python3",
    "python3.13",
    "stubgen",
    "stubtest",
    "symilar",
    "sync-dev",
    "undill",
    "uvx",
    "virtualenv",
]

# --- Allowed Items at Project Root (for test_project_layout.py) ---
[tool.zeroth-law.allowed-project-roots]
items = [
    "src",
    "tests",
    "docs",
    "frameworks",
    "scripts",
    "templates",
    "tools",
    ".venv",
    ".pytest_cache",
    ".github",
    ".vscode",
    ".cursor",
    ".ignore",
    "build",
    "dist",                      # Standard build output
    "coverage_html_report",      # Standard coverage report
    "generated_command_outputs", # For baseline text
    "pyproject.toml",
    "uv.lock",
    "README.md",
    "LICENSE",
    "NOTES.md",
    "TODO.md",
    "CODE_TODOS.md",
    ".gitignore",
    ".pre-commit-config.yaml",
    "mock_whitelist.toml",       # Mock config file
    "package.json",              # For Node/Prettier
    "package-lock.json",         # For Node/Prettier
    "node_modules",              # For Node/Prettier
    ".coverage",                 # Coverage database
    "project_structure.json",    # Project data file
    "requirements-dev.txt",      # Generated requirements for container
]

# ----------------------------------------- #

# Add pytest configuration section
[tool.pytest.ini_options]
# directories to search for tests
# testpaths = [
#     "tests",
# ]
# Add custom markers here
markers = [
    "zlf_compliance: marks tests related to Zeroth Law Framework compliance checks",
]
# Default options
addopts = "-ra -q --color=yes --disable-warnings"

[tool.ruff]
# Allow fixing errors automatically.
fix = true
# Display violations that are fixable even if `fix` is disabled.
show-fixes = true
# Select all rules by default.
# fixable = ["ALL"]
# Explicitly configure deviates from the defaults.
# extend-fixable = ["B", "RUF100"]

# Same as Black.
line-length = 120 # set to 140 when moved to main branch

# Assume Python 3.13
target-version = "py313"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".legacy",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*.egg-info",
    "environment.yml",
]

[tool.ruff.lint]
# Allow unused variables for now to unblock refactoring on dev branch.
# TODO: Implement pytest checks or similar to catch unused variables per file/commit
#       before merging to main, instead of relying on a global Ruff check.
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D106", # Missing docstring in public nested class
    "D107", # Missing docstring in __init__
    "D200", # One-line docstring should fit on one line with quotes
    "D203", # 1 blank line required before class docstring (found 0) -> Conflicts with D211
    # "D205",  # 1 blank line required between summary line and description
    "D211", # No blank lines allowed before class docstring -> Conflicts with D203
    # "D212",  # Multi-line docstring summary should start at the first line
    # "D213",  # Multi-line docstring summary should start at the second line
    "D400", # First line should end with a period
    # "D401",  # First line should be in imperative mood
    # "D415",  # First line should end with a period, question mark, or exclamation point
    "D417", # Missing argument description in the docstring

    # Complexity / Length
    "C901",    # `function` is too complex
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0915", # Too many statements
    # "PLR2004", # Magic value used in comparison

    # Annotations
    # "ANN001",  # Missing type annotation for function argument
    # "ANN002",  # Missing type annotation for `*args`
    # "ANN003",  # Missing type annotation for `**kwargs`
    # "ANN101",  # Missing type annotation for `self` in method (Removed from Ruff)
    # "ANN102",  # Missing type annotation for `cls` in classmethod (Removed from Ruff)
    # "ANN201",  # Missing return type annotation for public function
    # "ANN202",  # Missing return type annotation for private function
    # "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed

    # Naming
    # "N802",    # Function name should be lowercase
    # "N803",    # Argument name should be lowercase
    # "N806",    # Variable in function should be lowercase

    # Security
    "S101", # Use of assert detected
    "S603", # subprocess call - check for execution of untrusted input

    # Pytest related
    # "PT001",   # Use `pytest.fixture()` without parameters
    # "PT011",   # `pytest.raises(ValueError)` is too broad, specify the match parameter

    # Others
    "TRY003", # Avoid specifying long messages outside the exception class
    "T201",   # print found
    # "FIX002",  # Line contains TODO

    # Supressing for now on dev branch (2025-04-11)
    "F841", # Local variable assigned but never used
    "F821", # ignored during dev
    "F401", # ignored during dev
    "E402", # ignored during dev
    "F541", # ignored during dev
    "F811", # ignored during dev
    "F841", # ignored during dev
]

# Ignore specific rules per file/directory
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"] # Ignore assert statements in test files
"src/zeroth_law/analyzer.py" = [
    "N802",
    "SLF001",
] # Ignore visitor method names and private access

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.mypy]
# See https://mypy.readthedocs.io/en/stable/config_file.html
python_version = "3.13"
# warnings = true # Invalid option removed
pretty = true
show_error_context = true
show_error_codes = true
explicit_package_bases = true     # Help mypy understand src layout
ignore_missing_imports = false    # Default to false, override below
cache_dir = "/run/user/1000/mypy"

# Per-module options:
[[tool.mypy.overrides]]
# Ignore missing imports for libraries that don't have type hints readily available
module = [
    "ruff.*", # Ignore missing types/stubs for ruff
    # Add others here if needed, e.g., "xdg.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# TEMPORARY: Ignore errors for specific modules causing
# "Source file found twice" when run via action_runner/subprocess.
# TODO: Investigate root cause of path issue for mypy execution via action_runner.
module = [
    "zeroth_law.git_utils",
    "src.zeroth_law.git_utils",                # Add src prefix
    "zeroth_law.analyzer.python.analyzer",
    "src.zeroth_law.analyzer.python.analyzer", # Add src prefix
]
ignore_errors = true

# [[tool.mypy.overrides]] # Example for ignoring specific errors in a module

[tool.pylint.'MAIN']
# Use all default checkers.
disable = ["all"]                                                  # Disable all checks
enable = ["R0801"]                                                 # similar lines in modules checker
ignore = ["CVS", ".git", ".hg", ".svn", "tests/", "venv", ".venv"]
persistent = "yes"
jobs = 0                                                           # Use all available CPUs

# Markdownlint configuration
[tool.markdownlint]
MD007 = { ul-indent = 4 } # Set unordered list indentation to 4 spaces

# --- Coverage Configuration (Optional: Fine-tuning) ---
[tool.coverage.run]
# branch = true # Temporarily commented out again
# parallel = true # Temporarily commented out again
source = ["src"] # Specify source directory for coverage

[tool.coverage.report]
# Whitelist: Explicit list of command sequences managed by ZLT
# Whitelist: Explicit list of command sequences managed by ZLT
# Whitelist: Explicit list of command sequences managed by ZLT
#fail_under = 90 # Uncomment and adjust threshold later
show_missing = true
skip_covered = true

[dependency-groups]
dev = ["pytest-mock>=3.14.0"]

[tool.zeroth-law.actions.format.zlt_options.check]
type = "flag"
description = "Run in check mode (don't modify files)."
